objects/Directory_Listing__c/Directory_Listing__c.object-meta.xml
<CustomObject>
    <label>Directory Listing</label>
    <nameField>
        <displayFormat>DL-{00000}</displayFormat>
        <label>Listing Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Directory Listings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>