objects/Directory_Listing__c/fields/Main_Listing__c.field-meta.xml
<CustomField>
    <fullName>Main_Listing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Main Listing</label>
    <type>Checkbox</type>
</CustomField>