objects/Directory_Listing__c/fields/Omit_Address__c.field-meta.xml
<CustomField>
    <fullName>Omit_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Omit Address</label>
    <type>Checkbox</type>
</CustomField>