objects/Directory_Listing__c/fields/Outbound_CID_Name_Same_as_Primary_DL__c.field-meta.xml
<CustomField>
    <fullName>Outbound_CID_Name_Same_as_Primary_DL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Outbound CID Name Same as Primary DL</label>
    <type>Checkbox</type>
</CustomField>