objects/Directory_Listing__c/fields/Technical_Information__c.field-meta.xml
<CustomField>
    <fullName>Technical_Information__c</fullName>
    <label>Directory Listing</label>
    <referenceTo>Technical_Information__c</referenceTo>
    <relationshipLabel>Directory Listings</relationshipLabel>
    <relationshipName>Directory_Listings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>