objects/Directory_Listing__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Additional Listing</fullName>
            </value>
            <value>
                <fullName>Alternate Call</fullName>
            </value>
            <value>
                <fullName>Cross Reference</fullName>
            </value>
            <value>
                <fullName>Foreign Listing</fullName>
            </value>
            <value>
                <fullName>Information Listing/Extra Line</fullName>
            </value>
            <value>
                <fullName>National Toll Free Directory</fullName>
            </value>
            <value>
                <fullName>Nonlisted</fullName>
            </value>
            <value>
                <fullName>Nonpublished</fullName>
            </value>
            <value>
                <fullName>Published</fullName>
            </value>
            <value>
                <fullName>Complimentary Listing</fullName>
            </value>
            <value>
                <fullName>Registration</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>