objects/Directory_Listing__c/fields/Which_Directory__c.field-meta.xml
<CustomField>
    <fullName>Which_Directory__c</fullName>
    <label>Which Directory</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ABERDEEN</fullName>
            </value>
            <value>
                <fullName>ALAMOSA</fullName>
            </value>
            <value>
                <fullName>ALBANY</fullName>
            </value>
            <value>
                <fullName>ALBERT LEA</fullName>
            </value>
            <value>
                <fullName>ALLIANCE/CHADRON</fullName>
            </value>
            <value>
                <fullName>APACHE JUNCTION &amp; E MESA</fullName>
            </value>
            <value>
                <fullName>ARVADA/BROOMFIELD/WESTMINSTER</fullName>
            </value>
            <value>
                <fullName>ASPEN/GLENWOOD SPRINGS</fullName>
            </value>
            <value>
                <fullName>AURORA/MONTBELLO/DIA</fullName>
            </value>
            <value>
                <fullName>BAINBRIDGE ISLAND</fullName>
            </value>
            <value>
                <fullName>BAKER CITY</fullName>
            </value>
            <value>
                <fullName>BARNUM</fullName>
            </value>
            <value>
                <fullName>BELLINGHAM</fullName>
            </value>
            <value>
                <fullName>BEMIDJI</fullName>
            </value>
            <value>
                <fullName>BIG HORN BASIN</fullName>
            </value>
            <value>
                <fullName>BISMARCK</fullName>
            </value>
            <value>
                <fullName>BLACKFOOT</fullName>
            </value>
            <value>
                <fullName>BOISE</fullName>
            </value>
            <value>
                <fullName>BOULDER</fullName>
            </value>
            <value>
                <fullName>BRAINERD</fullName>
            </value>
            <value>
                <fullName>BRIGHAM CITY</fullName>
            </value>
            <value>
                <fullName>BRIGHTON</fullName>
            </value>
            <value>
                <fullName>BUFFALO</fullName>
            </value>
            <value>
                <fullName>CACHE VALLEY</fullName>
            </value>
            <value>
                <fullName>CAMAS-WASHOUGAL</fullName>
            </value>
            <value>
                <fullName>CANON CITY</fullName>
            </value>
            <value>
                <fullName>CASA GRANDE</fullName>
            </value>
            <value>
                <fullName>CASTLE ROCK/PARKER</fullName>
            </value>
            <value>
                <fullName>CENTRAL &amp; DOWNTOWN DENVER</fullName>
            </value>
            <value>
                <fullName>CENTRAL OREGON</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>